--- a/src/app/home.component.html
+++ b/src/app/home.component.html
@@ -25,7 +25,7 @@
                     </a>
                 </li>
               </ul>
-              <a href='#' id='openup'>myTunes</a>
+              <a href='#' id='openup' (click)="onClick()">myTunes</a>
             </nav>
           </header>
           <div class="section-main container">
@@ -195,10 +195,6 @@
             Copyright &copy; 2018 Orange myTunes
           </div>
         </footer>
-      
-        <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-        crossorigin="anonymous"></script>
-        <script src="version1/src/js/main.js"></script>
       </body>
       
       
