--- a/src/app/home.component.html
+++ b/src/app/home.component.html
@@ -25,7 +25,7 @@
                     </a>
                 </li>
               </ul>
-              <a href='#' id='openup' (click)="onClick()">myTunes</a>
+              <a href='#' id='openup'>myTunes</a>
             </nav>
           </header>
           <div class="section-main container">
