--- a/src/app/glimpse.component.html
+++ b/src/app/glimpse.component.html
@@ -23,7 +23,7 @@
                     </a>
             </li>
         </ul>
-        <a href='#' id='openup' (click)="onClick()">myTunes</a>
+        <a href='#' id='openup'>myTunes</a>
     </nav>
 </header>
 
